--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-252.9KB/s(Youtube:不良林), server: v2ray1.udpgw.com, port: 443, type: vmess, uuid: b6581737-539e-4b68-b853-e50c291b250d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /howdy, ws-headers: {Host: v2ray1.udpgw.com}}
-  - {name: 以色列-5.07MB/s(Youtube:不良林), server: ru1.lolvps.xyz, port: 40047, type: vmess, uuid: 2b8e4fc6-0112-4b26-8c17-1bfef9a3ff99, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /6129CFHR, ws-headers: {Host: ru1.lolvps.xyz}}
-  - {name: 🇨🇳 台湾-1.12MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-5.66MB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
-  - {name: 🇨🇳 中国-228.7KB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
   - {name: 🇸🇬 新加坡-5.31MB/s(Youtube:不良林), server: 172.104.48.151, port: 8080, type: vmess, uuid: c8bab0e9-fad7-46ef-e74a-9cb2022ed9c9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 172.104.48.151}}
+  - {name: 🇨🇳 中国-1.07MB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: 21882ea6-235b-4463-93d4-55c7d378857d, sni: hk64.fans8.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.82MB/s(Youtube:不良林), server: 172.96.192.100, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
-  - {name: 🇯🇵 日本-5.37MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.42MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-1.80MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-270.4KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.88MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.73MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.53MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.93MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-252.9KB/s(Youtube:不良林)
-      - 以色列-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.93MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-252.9KB/s(Youtube:不良林)
-      - 以色列-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.93MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-252.9KB/s(Youtube:不良林)
-      - 以色列-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.93MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-252.9KB/s(Youtube:不良林)
-      - 以色列-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.93MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-252.9KB/s(Youtube:不良林)
-      - 以色列-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.93MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-252.9KB/s(Youtube:不良林)
-      - 以色列-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.93MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-252.9KB/s(Youtube:不良林)
-      - 以色列-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.93MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
