--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-11.85MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.51MB/s(Youtube:不良林), server: 120.233.186.59, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.52MB/s(Youtube:不良林), server: 120.233.186.59, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.57MB/s(Youtube:不良林), server: 120.233.186.59, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.19MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-564.1KB/s(Youtube:不良林), server: 139.217.229.103, port: 41203, type: vmess, uuid: 039aeb43-a240-3208-a447-ca80be12a290, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.38MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇰🇷 韩国-1.07MB/s(Youtube:不良林), server: jisu65.yaya89.xyz, port: 50065, type: vmess, uuid: 0358c017-415c-35e4-a79d-7cd9e25afe82, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: jisu65.yaya89.xyz}}
+  - {name: 🇺🇸 美国-235.4KB/s(Youtube:不良林), server: 51.81.223.0, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-13.79MB/s(Youtube:不良林), server: jp1.4gfree.qthang.net, port: 80, type: vmess, uuid: 748d40f6-6f82-43a0-a519-12883b1cb600, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /qthang, ws-headers: {Host: jp1.4gfree.qthang.net}}
+  - {name: 🇨🇳 中国-664.4KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-326.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇸🇬 新加坡-2.69MB/s(Youtube:不良林), server: 13.250.126.43, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇸🇬 新加坡-306.7KB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
