--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-306.7KB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.92MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.31MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.76MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-10.99MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.07MB/s(Youtube:不良林), server: jisu65.yaya89.xyz, port: 50065, type: vmess, uuid: 0358c017-415c-35e4-a79d-7cd9e25afe82, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: jisu65.yaya89.xyz}}
   - {name: 伊朗-472.9KB/s(Youtube:不良林), server: srvf.myandroidplus1.ir, port: 80, type: vmess, uuid: e7cf2f58-85b3-d3db-a75c-55df4a9ee83a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /apiws, ws-headers: {Host: srvf.myandroidplus1.ir}}
-  - {name: 🇸🇬 新加坡-482.7KB/s(Youtube:不良林), server: v2ray1.udpgw.com, port: 443, type: vmess, uuid: b6581737-539e-4b68-b853-e50c291b250d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /howdy, ws-headers: {Host: v2ray1.udpgw.com}}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.51MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.36MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.32MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.85MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
       - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-482.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
       - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-482.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
       - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-482.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
       - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-482.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
       - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-482.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
       - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-482.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-306.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.07MB/s(Youtube:不良林)
       - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-482.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
