--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.92MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.31MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 伊朗-472.9KB/s(Youtube:不良林), server: srvf.myandroidplus1.ir, port: 80, type: vmess, uuid: e7cf2f58-85b3-d3db-a75c-55df4a9ee83a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /apiws, ws-headers: {Host: srvf.myandroidplus1.ir}}
-  - {name: 🇨🇳 中国-9.51MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.36MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.32MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.85MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.05MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.90MB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.41MB/s(Youtube:不良林), server: 120.233.186.59, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.74MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.50MB/s(Youtube:不良林), server: ct.91js.pw, port: 10051, type: trojan, password: a13820c547fa34c5c45515c12f0cd576, sni: ct.91js.pw, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.90MB/s(Youtube:不良林), server: zz6.91js.pw, port: 10051, type: trojan, password: a13820c547fa34c5c45515c12f0cd576, sni: zz6.91js.pw, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-562.5KB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
+  - {name: 🇯🇵 日本-1.50MB/s(Youtube:不良林), server: vjp1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp1.0bad.com}}
+  - {name: 🇨🇳 中国-387.4KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇩🇪 德国-1.78MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.78MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.78MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.78MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.78MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.78MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.78MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 伊朗-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-996.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.78MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
